# houdini-xlb

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: VALIDATION.md
examples/: README.md  houdini_xlb_demo.hip  houdini_xlb_demo_optimization.json
houdini/: build_demo_hip.py  render_demo_frames.py
scripts/: make_readme_gif.py  optimize_demo.py  smoke_worker.py
src/houdini_xlb/: __init__.py  backend.py  cli.py  client.py  config.py  core.py  demo_study.py  houdini.py  houdini_sop.py  protocol.py  raster.py  timeline.py  validation.py  validation_cli.py  worker.py
tests/: test_houdini_xlb.py  test_validation.py
