[project]
name = "houdini-xlb"
version = "0.2.0"
description = "Timeline-aware cached XLB wind analysis from Houdini geometry."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
xlb = [
    "scipy>=1.11",
    "xlb @ git+https://github.com/Autodesk/XLB.git@9470e54a8d7ccd68d8e5563ca7a573040841ea8c",
    "warp-lang==1.10.0",
]
dev = ["pytest", "ruff"]
demo = ["pillow>=10"]

[project.scripts]
houdini-xlb = "houdini_xlb.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/houdini_xlb"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
exclude = ["/.pytest_cache", "/.ruff_cache", "/artifacts", "/outputs"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["tests"]
pythonpath = ["src"]
